--- a/en/index.html
+++ b/en/index.html
@@ -19,52 +19,79 @@
   </head>
   <body>
     <div class="section text-center">
-      <br /><br /><br /><br />
+      <br /><br /><br />
       <img
         src="/logos/BP3.png"
         alt="Logo"
         class="img-fluid"
         style="max-width: 900px; width: 90%"
       />
-       <br /> <br />  
-
-          <img src="/static/2025/workshop-causal.jpg" alt="Logo" class="img-fluid" style="max-width: 1200px; width: 90%;">
-     
+      <p style="font-size: 1.85rem">
+        <br />
+        <b>We promote Plural Intelligence among the peoples of the Global South</b></p>
       <p style="font-size: 1.55rem">
+        Optimal beliefs distribution given available information
         <br />
-        <b>Plural Intelligence.</b>
-        <br />
-        Optimal distribution of beliefs given available information.
-        <br />
-        Intersubjective agreements in contexts of uncertainty.
-        <br /><br />
-
-        <b>Mission.</b>
-        <br />
-        We promote Plural Intelligence in the peoples of the Global South.
+        Intersubjective agreements in contexts of uncertainty
       </p>
+      <br />
+          <img src="/img/causal-artificial.jpeg" alt="Logo" class="img-fluid" style="max-width: 1000px; width: 80%;">
     </div>
 
     <custom-header data-lang="en">
       <br /><br />
       
       <section class="info-evento container py-5 text-center">
-        <h2>Welcome to the Bayesian community of Latin America!</h2>
+        <h2>Welcome to the Latin American Bayesian community!</h2>
         <p class="lead">
           We are dedicated to promoting the reasoning system for contexts of uncertainty common to all data sciences (the Bayesian approach to probability), strengthening the Latin American network in academia, industry and society, and fostering practical application and plural dialogue to address the challenges of our territories.
         </p>
       </section>
 
+      <div class="section text-center">
+      <h2>Ciudad del Este 2026</h2>
+      <p style="font-size: 1.55rem">
+        <b> Plurinational Bayes Training (+ Certification):</b> 29 June - 01 July.
+        <br />
+        <b> Plurinational Bayes Congress:</b> 01 - 03 July.</p>
+      <div id="countdown" class="countdown"></div>
+      <br/>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3807.9880272473233!2d-54.67267739053155!3d-25.4835652948246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94f6844c9fd72ab7%3A0xd17ae0edca7564dd!2sUniversidad%20Nacional%20del%20Este!5e1!3m2!1sen!2sco!4v1766534295846!5m2!1sen!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <br /><br /><br />
+    <div class="section text-center">
+      <a href="/en/2025/index.html">
+      <h3>Bogotá 2025</h3>
+      <img src="/static/2025/workshop-causal.jpg" alt="Logo" class="img-fluid" style="max-width: 1000px; width: 80%;">
+      </a>
+    </div>
+    <br /><br />
+    <div class="section text-center">
+      <a href="/en/2024/index.html">
+      <h3>Salta 2024</h3>
+      <img src="/static/2024/2024_crop.jpeg" alt="Logo" class="img-fluid" style="max-width: 800px; width: 80%;"></a>
+    </div>
+    <br /><br />
+    <div class="section text-center">
+      <a href="/en/2023/index.html">
+      <h3>Santiago del Estero 2023</h3>
+      <img src="/img/2023/santiago.jpg" alt="Logo" class="img-fluid" style="max-width: 800px; width: 80%;">
+      </a>
+    </div>
+
+
+
       <section class="social-section container py-5 text-center">
       <h3>Join the official community channel</h3>
-      <p>(This video has been edited. Watch the full version <a href="https://www.youtube.com/watch?v=uT05nZgTqB4&t=900s">here</a>)</p>
-        <div class="social-icons-container">
+       <div class="social-icons-container">
           <a href="https://groups.google.com/g/bayes-plurinacional" class="social-link email" target="_blank">
               <i class="fas fa-envelope"></i>
               <span>Google Group</span>
           </a>
         </div>
+      <br/>  
       <h3>and explore our YouTube channel</h3>
+      <p>(This video has been edited. Watch the full version <a href="https://www.youtube.com/watch?v=uT05nZgTqB4&t=900s">here</a>)</p>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/nD6NEG2MnDc?si=G80EWjchPvD0--RA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </section>
 
