--- a/es/index.html
+++ b/es/index.html
@@ -19,29 +19,23 @@
   </head>
   <body>
     <div class="section text-center">
-      <br /><br /><br /><br />
+      <br /><br /><br />
       <img
         src="/logos/BP3.png"
         alt="Logo"
         class="img-fluid"
         style="max-width: 900px; width: 90%"
       />
-      <br /> <br />  
-
-          <img src="/static/2025/workshop-causal.jpg" alt="Logo" class="img-fluid" style="max-width: 1200px; width: 90%;">
+      <p style="font-size: 1.85rem">
+        <br />
+        <b>Promovemos la Inteligencia Plural en los pueblos del Sur Global</b></p>
       <p style="font-size: 1.55rem">
+        Distribución de creencias óptimas dada la información disponible
         <br />
-        <b>Inteligencia Plural.</b>
-        <br />
-        Distribución de creencias óptimas dada la información disponible.
-        <br />
-        Acuerdos intersubjetivos en contextos de incertidumbre.
-        <br /><br />
-
-        <b>Misión.</b>
-        <br />
-        Promovemos la Inteligencia Plural en los pueblos del Sur Global.
+        Acuerdos intersubjetivos en contextos de incertidumbre
       </p>
+      <br />
+          <img src="/img/causal-artificial.jpeg" alt="Logo" class="img-fluid" style="max-width: 1000px; width: 80%;">
     </div>
 
     <custom-header data-lang="es">
@@ -53,9 +47,41 @@
           Nos dedicamos a promover el sistema de razonamiento para contextos de incertidumbre común a todas las ciencias con datos (el enfoque bayesiano de la probabilidad), fortalecer la red de América Latina en la academia, la industria y la sociedad, y fomentar la aplicación práctica y el diálogo plural para abordar los desafíos propios de nuestros territorios.
         </p>
       </section>
+    
+    <div class="section text-center">
+      <h2>Ciudad del Este 2026</h2>
+      <p style="font-size: 1.55rem">
+        <b> Formación (+ Certificación) Bayes Plurinacional:</b> 29 de junio al 01 de julio.
+        <br />
+        <b> Congreso Bayes Plurinacional:</b> 01 al 03 de julio.</p>
+      <div id="countdown" class="countdown"></div>
+      <br/>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3807.9880272473233!2d-54.67267739053155!3d-25.4835652948246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94f6844c9fd72ab7%3A0xd17ae0edca7564dd!2sUniversidad%20Nacional%20del%20Este!5e1!3m2!1sen!2sco!4v1766534295846!5m2!1sen!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <br /><br /><br />
+    <div class="section text-center">
+      <a href="/es/2025/index.html">
+      <h3>Bogotá 2025</h3>
+      <img src="/static/2025/workshop-causal.jpg" alt="Logo" class="img-fluid" style="max-width: 1000px; width: 80%;">
+      </a>
+    </div>
+    <br /><br />
+    <div class="section text-center">
+      <a href="/es/2024/index.html">
+      <h3>Salta 2024</h3>
+      <img src="/static/2024/2024_crop.jpeg" alt="Logo" class="img-fluid" style="max-width: 800px; width: 80%;"></a>
+    </div>
+    <br /><br />
+    <div class="section text-center">
+      <a href="/es/2023/index.html">
+      <h3>Santiago del Estero 2023</h3>
+      <img src="/img/2023/santiago.jpg" alt="Logo" class="img-fluid" style="max-width: 800px; width: 80%;">
+      </a>
+    </div>
+
 
       <section class="social-section container py-5 text-center">
-      <h3>Únete al canal oficial de la comunidad</h3>
+      <h2>Únete al canal de comunicaciones oficiales de la comunidad</h2>
         <div class="social-icons-container">
           <a href="https://groups.google.com/g/bayes-plurinacional" class="social-link email" target="_blank">
               <i class="fas fa-envelope"></i>
@@ -63,7 +89,7 @@
           </a>
         </div>
       <br/>  
-      <h3>y explora nuestro canal de YouTube</h3>
+      <h2>y suscríbete a nuestro canal de YouTube</h2>
       <p>(El siguiente video fue editado. Para ver la versión completa ir <a href="https://www.youtube.com/watch?v=uT05nZgTqB4&t=900s">aquí</a>)</p>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/nD6NEG2MnDc?si=G80EWjchPvD0--RA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </section>
