Video central desde el segundo 29

--- a/en/index.html
+++ b/en/index.html
@@ -92,7 +92,7 @@
       <br/>  
       <h3>and explore our YouTube channel</h3>
       <p>(This video has been edited. Watch the full version <a href="https://www.youtube.com/watch?v=uT05nZgTqB4&t=900s">here</a>)</p>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/nD6NEG2MnDc?si=G80EWjchPvD0--RA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://youtu.be/nD6NEG2MnDc?si=sh9dBTOdsbbd_Dxt&t=29" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </section>
 
       <section class="sponsors-section container py-5">
