--- a/es/index.html
+++ b/es/index.html
@@ -51,9 +51,9 @@
     <div class="section text-center">
       <h2>Ciudad del Este 2026</h2>
       <p style="font-size: 1.55rem">
-        <b> Formación (+ Certificación) Bayes Plurinacional:</b> 29 de junio al 01 de julio.
+        <b> Formación (+ Certificación) Bayes Plurinacional:</b> 10 al 12 de agosto.
         <br />
-        <b> Congreso Bayes Plurinacional:</b> 01 al 03 de julio.</p>
+        <b> Congreso Bayes Plurinacional:</b> 12 al 14 de agosto.</p>
       <div id="countdown" class="countdown"></div>
       <br/>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3807.9880272473233!2d-54.67267739053155!3d-25.4835652948246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94f6844c9fd72ab7%3A0xd17ae0edca7564dd!2sUniversidad%20Nacional%20del%20Este!5e1!3m2!1sen!2sco!4v1766534295846!5m2!1sen!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
